src/objects/CustomPermissions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IsCustomTab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCustomTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <description>Type the name of the profile here</description>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Setting__c</fullName>
        <description>Use this field to set the Tab visibility bitwise in this order
1 - Round Table
2 - My Perform
4 - Respond EMS
8 - Feature Request</description>
        <inlineHelpText>Use this field to set the Tab visibility bitwise in this order
1 - Round Table
2 - My Perform
4 - Respond EMS
8 - Feature Request</inlineHelpText>
        <label>Tab Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Permissions</label>
    <listViews>
        <fullName>All_Plus_Some</fullName>
        <columns>NAME</columns>
        <columns>Product_Family__c</columns>
        <columns>Tab_Setting__c</columns>
        <columns>Profile_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Plus Some</label>
    </listViews>
</CustomObject>